--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,9 @@
        </h1>
         {% include 'menu/nav.html.twig' %}
     </header>
-        {% block body %}{% endblock %}
+        <main>
+            {% block body %}{% endblock %}
+        </main>
     <footer>
         {% include 'menu/nav.html.twig' %}
     </footer>
