--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -6,4 +6,19 @@
 {# si je redéfinis le contenu, j'écrase le contenu de la base #}
 {% block body %}
     <h1>Welcome to series !</h1>
+
+    <div> {{ name }} </div>
+    {# les filtres pour désactiver la protection XSS #}
+    <div> {{ name | raw }} </div>
+    {# suppression complète du code HTML #}
+    <div> {{ name | striptags }} </div>
+
+    <br>
+    <h2>Serie's details</h2>
+
+    <ul>
+    {% for key,val in serie %}
+        <li>{{ key }} : {{ val }}</li>
+    {% endfor %}
+    </ul>
 {% endblock %}
