--- a/templates/serie/add.html.twig
+++ b/templates/serie/add.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% form_theme serieForm 'FormThemes/formTheme.html.twig' %}
 
 {% block title %}
     {{ parent() }} | Add
