--- a/templates/serie/list.html.twig
+++ b/templates/serie/list.html.twig
@@ -7,6 +7,15 @@
 {% block body %}
     <h2>Here are all the series !</h2>
 
+    <div class="flex_div flex_between">
+        {% if currentPage > 1 %}
+        <a class="link_button" href="{{ path('serie_list', {'page': currentPage-1}) }}">Previous Page</a>
+        {% endif %}
+        {% if currentPage < maxPage %}
+        <a class="link_button" href="{{ path('serie_list', {'page': currentPage+1}) }}">Next Page</a>
+        {% endif %}
+    </div>
+
     <section class="series-list">
         {% for serie in series %}
             <article>
