Mise en place de l'authentification, des rôles, de l'entity user, màj de la BDD

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -134,10 +134,14 @@ textarea{
 }
 
 .flash-success {
-    background-color: lawngreen
+    background-color: chartreuse;
 }
 
 .flash-error {
+    background-color: red
+}
+
+.flash-warning {
     background-color: red
 }
 
