--- a/templates/serie/add.html.twig
+++ b/templates/serie/add.html.twig
@@ -2,7 +2,7 @@
 {% form_theme serieForm 'FormThemes/formTheme.html.twig' %}
 
 {% block title %}
-    {{ parent() }} | Add
+    {{ parent() }} | Add a Serie
 {% endblock %}
 
 {% block body %}
