--- a/templates/menu/nav.html.twig
+++ b/templates/menu/nav.html.twig
@@ -6,6 +6,9 @@
         {% if app.user %}
             <li><a href="{{ path('serie_add') }}">New Serie</a></li>
             <li><a href="{{ path('season_add') }}">New Season</a></li>
+            {% if is_granted("ROLE_ADMIN") %}
+                <li><a href="{{ path('admin-dashboard') }}">Dashboard</a></li>
+            {% endif %}
             <li><a href="{{ path('app_logout') }}">Log Out ({{ app.user.userIdentifier }})</a></li>
         {% else %}
             <li><a href="{{ path('app_login') }}">Sign in</a></li>
